ingress/ingress-mlflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: kc
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow.midominio.mx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow
            port:
              number: 5000
